[gd_scene load_steps=18 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Backdrop.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Mute City.ogg" type="AudioStream" id=4]
[ext_resource path="res://AudioStreamPlayer.gd" type="Script" id=5]
[ext_resource path="res://Bar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Camera2D.gd" type="Script" id=7]
[ext_resource path="res://Assets/level_0.png" type="Texture" id=8]
[ext_resource path="res://Assets/level_1.png" type="Texture" id=9]
[ext_resource path="res://Assets/level_2.png" type="Texture" id=10]
[ext_resource path="res://Assets/level_3.png" type="Texture" id=11]
[ext_resource path="res://Assets/level_4.png" type="Texture" id=12]
[ext_resource path="res://Assets/level_5.png" type="Texture" id=13]
[ext_resource path="res://arial_narrow_7.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Assets/you-got-boost-power.wav" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 14 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Backdrop" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 300 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 100, 200 )
z_index = 10

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -65.0
autoplay = true
script = ExtResource( 5 )

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="U_Bar" parent="." instance=ExtResource( 6 )]
position = Vector2( -512, 284 )
scale = Vector2( 1, 1.25 )
z_index = 50

[node name="L_Bar" parent="." instance=ExtResource( 6 )]
position = Vector2( -512, 478 )
scale = Vector2( 1, 1.25 )
z_index = 50

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 256, 350 )
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Shake" type="Timer" parent="Camera2D"]
wait_time = 0.2
one_shot = true

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="Level" type="AnimatedSprite" parent="."]
position = Vector2( 28, 476 )
scale = Vector2( 2, 2 )
z_index = 60
frames = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 15.3339
margin_top = 13.8005
margin_right = 119.334
margin_bottom = 106.8
custom_fonts/font = SubResource( 2 )

[node name="PowerUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
[connection signal="phaseFive" from="." to="." method="_on_phaseFive"]
[connection signal="phaseFive" from="." to="Player" method="_on_phaseFive"]
[connection signal="phaseFour" from="." to="U_Bar" method="_on_phaseFour"]
[connection signal="phaseFour" from="." to="L_Bar" method="_on_phaseFour"]
[connection signal="phaseFour" from="." to="Camera2D" method="_on_phaseFour"]
[connection signal="phaseFour" from="." to="." method="_on_phaseFour"]
[connection signal="phaseFour" from="." to="Player" method="_on_phaseFour"]
[connection signal="phaseOne" from="." to="Camera2D" method="_on_phaseOne"]
[connection signal="phaseThree" from="." to="Player" method="_on_phaseThree"]
[connection signal="phaseTwo" from="." to="BGM" method="_on_phaseTwo"]
[connection signal="playerJump" from="Player" to="Camera2D" method="_on_playerJump"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="Camera2D/Shake" to="Camera2D" method="_on_Shake_timeout"]
